# Clean-Architecture-Python

./: README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
clean_architecture_python/init/: schema.sql
clean_architecture_python/src/data/interfaces/: users_repository.py
clean_architecture_python/src/data/use_cases/: user_finder.py
clean_architecture_python/src/domain/models/: users.py
clean_architecture_python/src/domain/user_cases/: user_finder.py
clean_architecture_python/src/infra/db/entites/: users.py
clean_architecture_python/src/infra/db/repositories/: users_repository.py
clean_architecture_python/src/infra/db/settings/: connection.py
clean_architecture_python/tests/: test_connection.py  test_users_repository.py
solid_python/: principles.py
tests/: test_connection.py
