[tool.poetry]
name = "clean-architecture-python"
version = "0.1.0"
description = ""
authors = ["Jeferson Dalarmi <121770443+Jdalarmi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
